--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ ADMIN = 'admin'
 SECRET = 'admin'
 PORT = 8000
 UPLOAD_DIR = './uploaded_files'
+SETTIMEOUT = 5
+RESET_PRINTER = 'reset_printer'
+SERIAL_NO = 'serial_no'
+VENDOR_MODEL='printer_name'
