--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ RESET_PRINTER = 'reset_printer'
 SERIAL_NO = 'serial_no'
 VENDOR_MODEL='printer_name'
 SRC_DIR = './src'
+BARCODE_KEY = 'B088819170283097847575868632875'
+BARCODE_API_TOKEN = 'http://barcodes.olegon.ru/api/card/billing/0/'
+BARCODE_API_NAME_GOODS = 'http://barcodes.olegon.ru/api/card/name/'
+BARCODE_API_NAME_CLASS = 'http://barcodes.olegon.ru/api/card/class/'
